--- a/learnloop-frontend/package.json
+++ b/learnloop-frontend/package.json
@@ -9,13 +9,13 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.400.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "axios": "^1.7.2",
-    "recharts": "^2.12.7",
-    "lucide-react": "^0.400.0",
-    "date-fns": "^3.6.0"
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -28,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
+    "terser": "^5.44.1",
     "vite": "^5.3.3"
   }
 }
